# node-audio

./: .gitignore  .npmignore  CMakeLists.txt  PlaybackEvent.d.ts  PlaybackEvent.js  PlaybackEvent.js.map  index.d.ts  index.js  index.js.map  package-lock.json  package.json  test.cpp  test.js  test.js.map  tsconfig.json
lib/fdk-aac/: fdk-aac.lib
lib/ffmpeg/include/libavutil/: opt.h
lib/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avresample.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
lib/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
lib/lame/: libmp3lame-static.lib  libmpghip-static.lib
lib/ogg/: ogg.lib
lib/opus/: opus.lib
lib/speex/: libspeex.lib
lib/vorbis/: vorbis.lib  vorbisenc.lib
lib/wavpack/: libwavpack.lib
src/: node_audio.cpp
src-ts/: PlaybackEvent.ts  index.ts  node-cmake.d.ts  test.ts
src/enums/: AudioError.h  Command.h  CommandResult.h  EventType.h  PlaybackEvent.h  PlayerState.h  SampleFormatFlags.h
src/exceptions/: AudioException.cpp  AudioException.h  CommandException.cpp  CommandException.h  PlayerException.cpp  PlayerException.h
src/implementation/: AudioCallbackContainer.h  AudioPlayerImpl.cpp  AudioPlayerImpl.h  FFFrame.h  FFSource.cpp  FFSource.h  RingBuffer.cpp  RingBuffer.h  RtAudioRenderer.cpp  RtAudioRenderer.h  RtAudioStream.cpp  RtAudioStream.h  SampleRateConverter.cpp  SampleRateConverter.h  ScopedNodeRef.h  ScopedPacketUnref.cpp  ScopedPacketUnref.h  VolumeFilter.cpp  VolumeFilter.h
src/interface/: AudioPlayer.cpp  AudioPlayer.h  CommandWorker.cpp  CommandWorker.h
src/interfaces/: IAudioNode.cpp  IAudioNode.h  IAudioPlayerEventReceiver.h  IAudioRenderer.h  IAudioSink.cpp  IAudioSink.h  IAudioSource.cpp  IAudioSource.h
src/structs/: PlayerCommand.h  PlayerEvent.h
src/structs/commands/: LoadCommand.h  PauseCommand.h  PlayCommand.h  SeekCommand.h  SetVolumeCommand.h  StopCommand.h
src/structs/events/: CommandEvent.h  PlaybackErrorEvent.h  PlaybackFinishedEvent.h  PlayingEvent.h
